# Vi-Anonymous-Credential

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md
BulletProof/bulletproof-bls12/: Cargo.toml  package-lock.json  package.json  private_input.json  public_input.json
BulletProof/bulletproof-bls12/src/: BindHashMimc.circom  BindHashMimc.cpp  MiMC.rs  bulletproof.rs  check.rs  draft_code.MD  helper.rs  inner.rs  input.json  inputData.rs  lib.rs  main.rs  merge.sh  private_input.json  run.sh.sh  verification_key.json  verifier.sol
BulletProof/bulletproof-bls12/src/archieve/: BindingHash.circom  BindingHashSHA.circom  inner.rs  stop_working.rs
accumulator_impl/: Cargo.toml
accumulator_impl/src/: acc.rs  credential.rs  helper.rs  holder.rs  issuer.rs  lib.rs  main.rs  zkp.rs
accumulator_impl/tests/: acc_test.rs
eth/: API.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  eth  genesis.json  install-eth-command.sh  lambda-example.js  manage.sh  package.json  setup.sh
eth/examples/: api-examples.js  zkp_gas_analysis.js
eth/keystore/: UTC--2025-08-14T07-01-14.859052313Z--1d36388fb4cf7a4677a60c07c9941dba233bdd1e
eth/scripts/: check-balance.js  console.sh  create_accounts.sh  dev-mine.js  fund_accounts.js  send-transaction.js  start.sh  test-network.js  test_smart_contract.js
prover/: Cargo.toml
prover/src/: CarolCircuit.rs  circuit.rs  genzkp-accumulator.circom  lib.rs  main.rs
prover/src/build_carol/: proof_gen.sh  public_input-bls12-381.json  public_input_254.json
snark_mem_acc/src/: export_proof.rs  main.rs
src/: acumulator.rs  bb_params.rs  commitment.rs  credential.rs  issuer.rs  lib.rs  main.rs  witness.rs
verifier/: Cargo.toml
zkp-system/: .env  API.md  QUICK_START.md  README-REAL-CONTRACTS.md  README.md  SETUP.md  SUCCESS_SUMMARY.md  complete-deployment.js  deploy-contracts.js  deploy-final.js  deploy-mock-contracts.js  deploy-simple-real.js  deploy-simple.js  deploy-to-eth.js  deploy-with-env.js  deploy-with-funded-account.js  deploy-with-keystore-decrypt.js  deploy-with-keystore.js  deployment-info.json  deployment-status.json  env.example  extract-private-key.js  extract-private-keys.js  final-deployment-status.json  hardhat.config.js  main_c.sym  package-lock.json  package.json  pot12_0001.ptau  setup.sh  start.sh  test-automation.js  test-complete-zkp-ielts.js  test-eth-full-integration.js  test-eth-integration.js  test-full-zkp-ielts-workflow.js  test-hardhat-circom.js  test-ielts-zkp-with-eth.js  test-inputs.json  test-zkp-commitment-nullifier.js  (+1 more)
zkp-system/api/: ielts-credential-api.js  server.js  simple-ielts-api.js  simple-server.js
zkp-system/cache/: solidity-files-cache.json
zkp-system/circuits/: ielts-credential.circom  ielts-credential.json  ielts-credential.wasm  ielts-credential_final.zkey  ielts-credential_verification_key.json  main.circom  main.wasm  main_c.r1cs  main_c_0000.zkey  main_c_final.zkey  main_final.zkey  simple-ielts.circom  simple-ielts.json  verification_key.json
zkp-system/contracts/: IELTSCredentialVerifier.sol  SimpleIeltsVerifier.sol  Verifier.sol  ZKPPrivacyContract.sol  ZKPVerifier.sol
(+54 files in other folders)
