[package]
name = "accumulator_impl"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"
sha2 = "0.10"
rand = "0.8"
ark-ec = "0.4"
ark-bls12-381 = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
zeroize = "1.8"
num-bigint = { version = "0.4", features = ["rand"] }
bbs_plus = "0.24.0"
ark-serialize = "0.4"
ark-sponge = "0.4.0-alpha"
ark-r1cs-std = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-nonnative-field = "0.3.0"