[package]
name = "bulletproofs_bls12"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-relations = "0.4.0"
ark-ff = "0.4"           # field traits
ark-ec = "0.4"           # curve traits & hashing hooks
ark-bls12-381 = "0.4"    # BLS12-381 curve implementation
ark-serialize = "0.4"    # canonical (de)serialization
ark-std = "0.4"
rand = "0.8"
merlin = "3"
sha2 = "0.10"            # hashing primitives
ark-msm = "=0.3.0-alpha.1"
rand_core = "0.6"
bulletproofs-bls = "4.0.0"
curve25519-dalek = "5.0.0-pre.0"
bls12_381 = "0.4.0"
subtle = "2.6.1"
blstrs_plus = "0.8.18"
ark-bn254 = "0.4.0"
ark-sponge = "0.4.0-alpha"
blstrs = "0.6.2"
accumulator_impl = {path = "/home/accumulator/Vi-Anonymous-Credential/Accumulator/Accumulator_CA/accumulator_impl" }
num-bigint = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.99"
arkworks-gadgets = "0.4.20"
ark-r1cs-std = "0.4.0"
ark-crypto-primitives = "0.5.0"
